Fixed PageHeader overlapping mobile post form

--- a/assets/scss/_post-forms.scss
+++ b/assets/scss/_post-forms.scss
@@ -46,7 +46,7 @@
 
 .postFormBackdrop {
 	position: fixed;
-	z-index: 1000;
+	z-index: 2000;
 	height: 100%;
 	width: 100%;
 	background-color: #FFF;
